--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;500;600&family=Nunito:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500&display=swap');
 @import 'node_modules/modern-normalize/modern-normalize.css';
 
+@import 'variables';
+@import 'mixins';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import 'dot-pulse';
 
 @layer base {
     body {
