--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -65,6 +65,7 @@ body {
     padding-bottom: 50px !important;
 
     .swiper-pagination-bullet {
+        @apply h-[5px] w-[5px] md:h-[7px] md:w-[7px];
         background-color: rgba(255, 255, 255, 0.8) !important;
     }
 
