--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -61,6 +61,71 @@ body {
     animation-duration: 350ms !important;
 }
 
+.pulse-effect-primary,
+.pulse-effect-secondary {
+    z-index: 1;
+    position: relative;
+    font-size: inherit;
+    font-family: inherit;
+    outline: none;
+    border: none;
+    &:hover {
+        cursor: pointer;
+    }
+    &:hover::before {
+        transition: all 0.75s ease-in-out;
+        transform-origin: center;
+        transform: scale(1.3);
+        opacity: 0;
+    }
+    &::before {
+        content: '';
+        z-index: -1;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border: 4px solid #f43f5e;
+        border-radius: inherit;
+        transform-origin: center;
+        transform: scale(1);
+    }
+}
+
+.pulse-effect-secondary {
+    &::before {
+        border: 4px solid white;
+    }
+}
+
+.shine-effect {
+    z-index: 1;
+    position: relative;
+    font-size: inherit;
+    font-family: inherit;
+    color: white;
+    padding: 0.5em 1em;
+    outline: none;
+    border: none;
+    overflow: hidden;
+    cursor: pointer;
+    &::after {
+        content: '';
+        z-index: -1;
+        background-color: hsla(0, 0%, 100%, 0.2);
+        position: absolute;
+        top: -50%;
+        bottom: -50%;
+        width: 1.25em;
+        transform: translate3d(-525%, 0, 0) rotate(35deg);
+    }
+    &:hover::after {
+        transition: transform 0.45s ease-in-out;
+        transform: translate3d(200%, 0, 0) rotate(35deg);
+    }
+}
+
 .section-swiper {
     padding-bottom: 50px !important;
 
