--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -61,6 +61,18 @@ body {
     animation-duration: 350ms !important;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+    -moz-appearance: textfield;
+}
+
 .pulse-effect-primary,
 .pulse-effect-secondary {
     z-index: 1;
