--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -73,6 +73,42 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 
+.circle {
+    width: 3.75em;
+    transform-origin: center;
+    animation: rotate 2s linear infinite;
+}
+
+.circle-loading {
+    fill: none;
+    stroke: #fc2f70;
+    stroke-width: 2;
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke-linecap: round;
+    animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 90, 200;
+        stroke-dashoffset: -35px;
+    }
+    100% {
+        stroke-dashoffset: -125px;
+    }
+}
+
 .bubble-top-left-to-bottom-right {
     z-index: 1;
     position: relative;
