style: 💄 override react select style

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -63,6 +63,10 @@ body {
     animation-duration: 350ms !important;
 }
 
+.select__value-container {
+    flex-wrap: nowrap !important;
+}
+
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
