refactor: 💡 fix style & improve performance tooltip chapter

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -44,6 +44,7 @@ body {
     text-rendering: optimizeSpeed;
     @apply bg-background;
     height: fit-content;
+    overflow-x: hidden;
 }
 
 *:focus {
