feat: 🎸 teleport component to outside root

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,6 +47,7 @@ body {
     @apply bg-background;
     height: fit-content;
     overflow-x: hidden;
+    transition-duration: 350ms;
 }
 
 *:focus {
