style: 💄 add utilities

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -26,6 +26,9 @@
     .absolute-center {
         @apply flex items-center justify-center;
     }
+    .full-size {
+        @apply h-full w-full;
+    }
 }
 
 * {
